# mapreduce

./: CMakeLists.txt  MAPREDUCEConfig.cmake.in
include/: mapreduce.hpp
include/detail/intermediates/: in_memory.hpp  local_disk.hpp
